--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-./models
-./train
-./tfrecord_files
-./checkpoints
-./samples
+models/
+train/
+tfrecord_files/
+checkpoints/
+samples/
 .idea/
+__pycache__/
